k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ucla-forum
  labels:
    name: ucla-forum
